--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "camelize": "^1.0.0",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^9.6.9",
     "native-base": "3.3.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
