--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/stack": "^6.1.1",
     "camelize": "^1.0.0",
     "expo": "~42.0.0",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "^9.6.9",
     "native-base": "3.3.7",
